SNMP4SDN Project - User guide
Change-Id: Ie8af9049009a756938d400b411aee6d7cb0807ff
Signed-off-by: ylhsieh <ylhsieh@itri.org.tw>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -70,6 +70,8 @@ include::sfc/sfc.adoc[Service Function Chain]
 
 include::snmp/snmp-user-guide.adoc[SNMP]
 
+include::snmp4sdn/snmp4sdn-user-guide.adoc[SNMP4SDN]
+
 include::sxp/odl-sxp-user.adoc[]
 
 include::tcpmd5/odl-tcpmd5-all-user.adoc[TCP-MD5]
