SNMP4SDN Project Documents: get started guide, user guide, developer guide
Change-Id: I2879da78689061651646c4dab22356a8799a6174
Signed-off-by: ylhsieh <ylhsieh@itri.org.tw>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -86,8 +86,6 @@ include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
 
 include::openflowjava/odl-openflowjava-protocol-dev.adoc[]
 
-include::openflowplugin/odl-ofp-developer-guide.adoc[]
-
 include::opflex/agent-ovs-dev.adoc[]
 
 include::opflex/genie-dev.adoc[]
@@ -104,6 +102,8 @@ include::packetcable/packetcable-dev.adoc[Packet Cable PCMM Southbound Plugin]
 //include::reservation/reservation-dev.adoc[]
 
 include::sfc/sfc.adoc[]
+
+include::snmp4sdn/snmp4sdn-developer.adoc[SNMP4SDN]
 
 include::sxp/odl-sxp-dev.adoc[]
 
