ADDED UniMgr developer guide
Change-Id: I8da31e2766ee9b69c2b79d85b071a1b25ecfca90
Signed-off-by: adetalhouet <adetalhouet@inocybe.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -115,6 +115,8 @@ include::ttp/ttp-model-dev.adoc[]
 
 include::ttp/ttp-cli-tools-dev.adoc[]
 
+include::unimgr/odl-unimgr-channel-dev.adoc[]
+
 include::usc/odl-usc-channel-dev.adoc[]
 
 include::vtn/vtn-dev.adoc[]
